notes on buffer overflows

--- a/cse127-fall20/index.html
+++ b/cse127-fall20/index.html
@@ -71,6 +71,7 @@ Tue Oct  6 2020: [PA1: GDB + x86](pa/pa1.html)
 
 Wed Oct  7 2020: Buffer overflow attacks
   - [*Slides*](slides/2-bufferoverflows.pdf)
+  - [*GDB buffer overflow notes*](notes/bufferoverflow.html)
   - *Read*: [Smashing the Stack for Fun and Profit](http://phrack.org/issues/49/14.html#article) by Aleph One
   - *Optional:* 0x300-0x320 from [Hacking](https://nostarch.com/hacking2.htm). 0x200-0x270 if you don't have a strong C background.
   - *Resources mentioned in class:* [Project Zero exploits](https://googleprojectzero.blogspot.com/2020/07/mms-exploit-part-1-introduction-to-qmage.html), [finger daemon](https://minnie.tuhs.org/cgi-bin/utree.pl?file=4.3BSD/usr/src/etc/fingerd.c), [GEF](https://gef.readthedocs.io/en/master/), [Compiler explorer](https://godbolt.org/z/3iFhjy)
